# Forward_Inverse_Kinematics

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: config.yml
docs/assets/: UML_Diagram.html
include/: ChainGeometry.hpp  ChainKinematics.hpp  SceneManager.hpp  UiManager.hpp  animationLoop.hpp  chainGeometry.hpp  chainKinematics.hpp  geometryHelpers.hpp  kinematicChain.hpp  mathutil.hpp  sceneManager.hpp  uiManager.hpp
src/: CMakeLists.txt  ChainGeometry.cpp  ChainKinematics.cpp  SceneManager.cpp  UiManager.cpp  animationLoop.cpp  chainGeometry.cpp  chainKinematics.cpp  geometryHelpers.cpp  kinematicChain.cpp  main.cpp  sceneManager.cpp  uiManager.cpp
tests/: CMakeLists.txt  test1.cpp  testFunctions.cpp
